# scbs

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  test_store_unknown.json  test_unknown.json
docs/: ARCHITECTURE.md  JOURNEY.md  RESULTS.md
examples/: quickstart.py
experiments/approach_10_energy_based/: approach10_opt_50K_unknown.json  approach_10_optimized.py  test_approach_10_10k.py  test_approach_10_50k.py  test_approach_10_5k.py  test_head_to_head_20k.py  test_opt_50k.py  test_opt_50k_v2.py  test_optimized_50k_100k.py  test_original_100k.py  verify_5k.py
experiments/approach_3_baseline/: __init__.py  blueprint.py  store.py
experiments/approach_5_bucket_matrix/: test_approach_5.py
experiments/approach_6_threshold_sweep/: test_approach_6.py
experiments/approach_9_probabilistic_neighborhoods/: test_approach_9_5k.py
experiments/standard_benchmark/: test_5k_scale.py
scbs_clean/: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
scbs_clean/benchmarks/: run_cranfield.py
scbs_clean/benchmarks/cranfield/: DATA_LICENSE.md  cran.all.1400.xml  cran.qry.xml  cranqrel.trec.txt
scbs_clean/docs/: ARCHITECTURE.md  BENCHMARKS.md  COMPARISON_WITH_LLM.md  JOURNEY.md
scbs_clean/examples/: quickstart.py
scbs_clean/research_history/: README.md
scbs_clean/research_history/approach_10_energy_based/: debug_query.py  energy_store.py  test_approach_10.py  test_real_benchmark_direct.py  test_real_benchmark_vaswani.py
scbs_clean/research_history/approach_11_directed_flow/: directed_flow_store.py  test_cranfield_a11.py
scbs_clean/research_history/approach_12_sdsf/: sdsf_store.py  test_cranfield_a12.py
scbs_clean/research_history/approach_13_hard_gated/: hard_gated_store.py  test_a13_quick.py  test_cranfield_a13.py
scbs_clean/research_history/approach_14_late_interaction/: late_interaction_store.py  test_a14.py  test_a14_single.py
scbs_clean/research_history/approach_15_overlapping_dict/: overlapping_dict_store.py  test_a15.py
scbs_clean/research_history/approach_3_baseline/: clustering.py  distance.py  encoder.py  vocabulary.py
scbs_clean/research_history/approach_9_probabilistic_neighborhoods/: test_approach_9.py
scbs_clean/src/scbs/: __init__.py  bm25.py  metrics.py  retriever.py
scbs_clean/tests/: test_smoke.py
src/scbs/: distance.py  domain_voting.py  matrix_index.py
tests/: conftest.py  test_encoder.py  test_store.py
